# ds_product_analyzer

./: .gitignore  CMDS.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 58e001d6f16a_initial_schema.py  5f0b61dc40ef_add_tiktok_accel_to_trend_scores.py  a1b2c3d4e5f6_add_enhanced_scoring_columns.py  c3d4e5f6a7b8_add_shopify_momentum_to_trend_scores.py  d4e5f6a7b8c9_add_aliexpress_momentum_to_trend_scores.py  d69585b99723_add_price_history_table.py  dee27c553ae5_add_price_low_and_price_high_to_products.py  e5f6a7b8c9d0_add_amazon_bsr_to_products.py
scripts/: cleanup_non_products.py  seed_categories.py  test_amazon_scrape.py  test_tiktok_scrape.py  test_tiktok_search.py
src/ds_product_analyzer/: analysis_info.txt  config.py
src/ds_product_analyzer/api/: app.py
src/ds_product_analyzer/api/routes/: products.py
src/ds_product_analyzer/collectors/: aliexpress.py  amazon.py  base.py  etsy.py  google_trends.py  reddit.py  shopify.py  target.py  tiktok.py  walmart.py
src/ds_product_analyzer/db/: models.py  session.py
src/ds_product_analyzer/frontend/templates/: amazon.html  base.html  index.html  product.html  recommendations.html
src/ds_product_analyzer/pipeline/: dedup.py  llm_extract.py  normalizer.py  recommender.py  runner.py  sentiment.py  trend_scorer.py
src/ds_product_analyzer/scheduler/: jobs.py
src/ds_product_analyzer/utils/: bsr_sales.py
