[project]
name = "ds-product-analyzer"
version = "0.1.0"
description = "Dropshipping trend prediction — identifies products before they go mainstream"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "pytrends>=4.9",
    "praw>=7.8",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "thefuzz[speedup]>=0.22",
    "apscheduler>=3.10,<4",
    "pandas>=2.2",
    "jinja2>=3.1",
    "transformers>=4.40",
    "torch>=2.2",
    "playwright>=1.42",
    "anthropic>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
